--- a/about-jaipur.html
+++ b/about-jaipur.html
@@ -21,105 +21,144 @@
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 
+    <style>
+        /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
+        @media screen and (min-width: 1024px){
+            #logo
+            {
+                max-width: 30%;
+                height: auto !important;
+            }
+        }
+
+        /*###Tablet(medium)###*/
+        @media screen and (min-width : 768px) and (max-width : 1023px){
+            #logo
+            {
+                max-width: 40%;
+                height: auto !important;
+            }
+        }
+
+        /*### Smartphones (portrait and landscape)(small)### */
+        @media screen and (min-width : 0px) and (max-width : 767px){
+            #logo{
+                max-width: 50%;
+                height: auto !important;
+            }
+        }
+    </style>
+
 </head>
 
 <body>
 
 <div class="page-wrapper">
- 	
     <!-- Preloader -->
-    <div class="preloader"></div>
- 	<!-- Header span -->
+    <div class="preloader">
+        <div class="bookshelf_wrapper">
+            <ul class="books_list">
+                <li class="book_item first"></li>
+                <li class="book_item second"></li>
+                <li class="book_item third"></li>
+                <li class="book_item fourth"></li>
+                <li class="book_item fifth"></li>
+                <li class="book_item sixth"></li>
+            </ul>
+            <div class="shelf"></div>
+            <div class="shelf-logo"><img src="images/logo_image-min.png"/></div>
+        </div>
+    </div>
+    <!-- Header span -->
 
     <!-- Header Span -->
     <span class="header-span"></span>
 
     <!-- Main Header-->
     <header class="main-header header-style-two">
-    <div class="main-box">
-        <div class="auto-container clearfix">
-            <div class="logo-box">
-                <div class="logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
-            </div>
+        <div class="main-box">
+            <div class="auto-container clearfix">
+                <div class="logo-box" id="logo">
+                    <div class="logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
+                </div>
 
-            <!--Nav Box-->
-            <div class="nav-outer clearfix">
-                <!--Mobile Navigation Toggler-->
-                <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
-                <!-- Main Menu -->
-                <nav class="main-menu navbar-expand-md navbar-light">
-                    <div class="navbar-header">
-                        <!-- Togg le Button -->
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="icon flaticon-menu-button"></span>
-                        </button>
-                    </div>
+                <!--Nav Box-->
+                <div class="nav-outer clearfix">
+                    <!--Mobile Navigation Toggler-->
+                    <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
+                    <!-- Main Menu -->
+                    <nav class="main-menu navbar-expand-md navbar-light">
+                        <div class="navbar-header">
+                            <!-- Togg le Button -->
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="icon flaticon-menu-button"></span>
+                            </button>
+                        </div>
 
-                    <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
-                        <ul class="navigation clearfix">
-                            <li class="current dropdown"><a href="index.html">Home</a></li>
-                            <li class="dropdown"><a href="ssic.html">About</a>
-                                <ul>
-                                    <li><a href="about-us.html">SSIC 2017</a></li>
-                                    <li><a href="about-us.html">SSIC 2019</a></li>
-                                    <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
-                                    <li><a href="about-jaipur.html">About Jaipur</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown"><a href="speakers.html">Speakers</a></li>
-                            <li class="dropdown"><a href="schedule.html">Schedule</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </nav>
-                <!-- Main Menu End-->
-
-                <!-- Outer box -->
-                <div class="outer-box">
-                    <!--Search Box-->
-                    <div class="search-box-outer">
-                        <div class="dropdown">
-                            <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
-                            <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
-                                <li class="panel-outer">
-                                    <div class="form-container">
-                                        <form method="post" action="index.html">
-                                            <div class="form-group">
-                                                <input type="search" name="field-name" value="" placeholder="Search Here" required="">
-                                                <button type="submit" class="search-btn"><span class="fa fa-search"></span></button>
-                                            </div>
-                                        </form>
-                                    </div>
+                        <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
+                            <ul class="navigation clearfix">
+                                <li class="dropdown"><a href="index.html">Home</a></li>
+                                <li class="current dropdown"><a href="ssic.html">About</a>
+                                    <ul>
+                                        <li><a href="ssic.html">SSIC 2017</a></li>
+                                        <li><a href="ssic2019.html">SSIC 2019</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
+                                        <li><a href="about-jaipur.html">About Jaipur</a></li>
+                                    </ul>
                                 </li>
+                                <li ><a href="speakers.html">Speakers</a></li>
+                                <li ><a href="organizers.html">Organizers</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
-                    </div>
+                    </nav>
+                    <!-- Main Menu End-->
 
-                    <!-- Button Box -->
-                    <div class="btn-box">
-                        <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                    <!-- Outer box -->
+                    <div class="outer-box">
+                        <!--Search Box-->
+                        <div class="search-box-outer">
+                            <div class="dropdown">
+                                <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
+                                <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
+                                    <li class="panel-outer">
+                                        <div class="form-container">
+                                            <form method="post" action="index.html">
+                                                <div class="form-group">
+                                                    <input type="search" name="field-name" value="" placeholder="Search Here" required="">
+                                                    <button type="submit" class="search-btn"><span class="fa fa-search"></span></button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Button Box -->
+                        <div class="btn-box">
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Mobile Menu  -->
-    <div class="mobile-menu">
-        <div class="menu-backdrop"></div>
-        <div class="close-btn"><span class="icon flaticon-cancel-1"></span></div>
+        <!-- Mobile Menu  -->
+        <div class="mobile-menu">
+            <div class="menu-backdrop"></div>
+            <div class="close-btn"><span class="icon flaticon-cancel-1"></span></div>
 
-        <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
-        <nav class="menu-box">
-            <div class="nav-logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
+            <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
+            <nav class="menu-box">
+                <div class="nav-logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
 
-            <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
-        </nav>
-    </div><!-- End Mobile Menu -->
-</header>
+                <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
+            </nav>
+        </div><!-- End Mobile Menu -->
+    </header>
     <!--End Main Header -->
-
-    <!--Page Title-->
+  <!--Page Title-->
     <section class="page-title" style="background-image:url(images/background/hawa2.jpg);">
         <div class="auto-container">
             <h1>"Blushing bride draped in pink, dancing in our dreams while the peacocks sing"</h1>
