--- a/organizers.html
+++ b/organizers.html
@@ -20,6 +20,7 @@
 
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+
     <style>
         /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
         @media screen and (min-width: 1024px){
@@ -105,8 +106,8 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li ><a class="current" href="speakers.html">Speakers</a></li>
-                                <li ><a href="organizers.html">Organizers</a></li>
+                                <li ><a href="speakers.html">Speakers</a></li>
+                                <li ><a class="current" href="organizers.html">Organizers</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
@@ -183,7 +184,7 @@
             </div>
 
             <div class="row">
-                
+
                 <!-- Speaker Block -->
                 <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
@@ -192,9 +193,9 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -213,9 +214,9 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -234,7 +235,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -255,7 +256,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -276,7 +277,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -297,7 +298,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -318,7 +319,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -339,7 +340,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -369,7 +370,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -390,7 +391,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -411,7 +412,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -432,7 +433,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -453,7 +454,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -474,7 +475,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -495,7 +496,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -516,7 +517,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -546,18 +547,18 @@
             </div>
 
             <div class="row">
-                
+
                 <!-- Speaker Block -->
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Dale Marke</a></h4>
                             <span class="designation">Event Manager</span>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -572,13 +573,13 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Natisha Decoux</a></h4>
                             <span class="designation">Event Manager</span>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -593,7 +594,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Adolfo Plahs</a></h4>
@@ -614,7 +615,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Mitchell Hegg</a></h4>
@@ -635,7 +636,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
@@ -656,7 +657,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
@@ -677,7 +678,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
@@ -698,7 +699,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
@@ -855,8 +856,22 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
         <script src="js/map-script.js"></script>
         <!--End Google Map APi-->>
-    <!-- End Footer -->
+        <!-- End Footer -->
 
+
+<!--Scroll to top-->
+<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
+<script src="js/jquery.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/jquery.fancybox.js"></script>
+<script src="js/appear.js"></script>
+<script src="js/owl.js"></script>
+<script src="js/wow.js"></script>
+<script src="js/script.js"></script>
+<!-- Color Setting -->
+<script src="js/color-settings.js"></script>
 </body>
 <!-- Copied from https://expert-themes.com/html/eventrox/speakers.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 </html>
