--- a/ssic2019.html
+++ b/ssic2019.html
@@ -21,15 +21,55 @@
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 
+    <style>
+        /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
+        @media screen and (min-width: 1024px){
+            #logo
+            {
+                max-width: 30%;
+                height: auto !important;
+            }
+        }
+
+        /*###Tablet(medium)###*/
+        @media screen and (min-width : 768px) and (max-width : 1023px){
+            #logo
+            {
+                max-width: 40%;
+                height: auto !important;
+            }
+        }
+
+        /*### Smartphones (portrait and landscape)(small)### */
+        @media screen and (min-width : 0px) and (max-width : 767px){
+            #logo{
+                max-width: 50%;
+                height: auto !important;
+            }
+        }
+    </style>
+
 </head>
 
 <body>
 
 <div class="page-wrapper">
- 	
     <!-- Preloader -->
-    <div class="preloader"></div>
- 	<!-- Header span -->
+    <div class="preloader">
+        <div class="bookshelf_wrapper">
+            <ul class="books_list">
+                <li class="book_item first"></li>
+                <li class="book_item second"></li>
+                <li class="book_item third"></li>
+                <li class="book_item fourth"></li>
+                <li class="book_item fifth"></li>
+                <li class="book_item sixth"></li>
+            </ul>
+            <div class="shelf"></div>
+            <div class="shelf-logo"><img src="images/logo_image-min.png"/></div>
+        </div>
+    </div>
+    <!-- Header span -->
 
     <!-- Header Span -->
     <span class="header-span"></span>
@@ -38,8 +78,8 @@
     <header class="main-header header-style-two">
         <div class="main-box">
             <div class="auto-container clearfix">
-                <div class="logo-box">
-                    <div class="logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
+                <div class="logo-box" id="logo">
+                    <div class="logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
                 </div>
 
                 <!--Nav Box-->
@@ -57,17 +97,17 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class="current dropdown"><a href="index.html">Home</a></li>
-                                <li class="dropdown"><a href="ssic.html">About</a>
+                                <li class="dropdown"><a href="index.html">Home</a></li>
+                                <li class="current dropdown"><a href="ssic.html">About</a>
                                     <ul>
-                                        <li><a href="about-us.html">SSIC 2017</a></li>
-                                        <li><a href="about-us.html">SSIC 2019</a></li>
+                                        <li><a href="ssic.html">SSIC 2017</a></li>
+                                        <li><a href="ssic2019.html">SSIC 2019</a></li>
                                         <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="speakers.html">Speakers</a></li>
-                                <li class="dropdown"><a href="schedule.html">Schedule</a></li>
+                                <li ><a href="speakers.html">Speakers</a></li>
+                                <li ><a href="organizers.html">Organizers</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
@@ -111,14 +151,13 @@
 
             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/IMG2.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
 
                 <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
             </nav>
         </div><!-- End Mobile Menu -->
     </header>
     <!--End Main Header -->
-
     <!--Page Title-->
     <section class="page-title" style="background-image:url(images/background/5.jpg);">
         <div class="auto-container">
@@ -424,7 +463,6 @@
     </section>
     <!--End Newsletter Section -->
 
-    <!-- Main Footer -->
     <footer class="main-footer">
         <!--Widgets Section-->
         <div class="widgets-section">
@@ -437,10 +475,10 @@
                             <div class="footer-column col-xl-7 col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget about-widget">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.png" alt=""></a>
+                                        <a href="index.html"><img src="images/logo_image-min.png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <p>We have very good strength in innovative technology and tools with over 35 years of experience. We makes long-term investments goal in global companies in different sectors, mainly in Europe and other countries.</p>           
+                                        <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
                                     </div>
                                     <ul class="social-icon-one social-icon-colored">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -457,11 +495,10 @@
                                 <div class="footer-widget useful-links">
                                     <h2 class="widget-title">Useful Links</h2>
                                     <ul class="user-links">
-                                        <li><a href="index-2.html">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="projects.html">Projects</a></li>
-                                        <li><a href="blog.html">Blogs</a></li>
+                                        <li><a href="speakers.html">Speakers</a></li>
+                                        <li><a href="organize.html">Organizers</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -477,27 +514,22 @@
                                 <!--Footer Column-->
                                 <div class="footer-widget contact-widget">
                                     <h2 class="widget-title">Contact Us</h2>
-                                     <!--Footer Column-->
+                                    <!--Footer Column-->
                                     <div class="widget-content">
                                         <ul class="contact-list">
                                             <li>
-                                                <span class="icon flaticon-clock"></span>
-                                                <div class="text">Mon - Fri: 09:00 - 18:00</div>
-                                            </li>
-
-                                            <li>
                                                 <span class="icon flaticon-phone"></span>
-                                                <div class="text"><a href="tel:+1-345-5678-77">+1-345-5678-77</a></div>
+                                                <div class="text"><a href="tel:+91-96676-04115">+91-96676-04115</a></div>
                                             </li>
 
                                             <li>
                                                 <span class="icon flaticon-paper-plane"></span>
-                                                <div class="text"><a href="mailto:support@example.com">support@example.com</a></div>
+                                                <div class="text"><a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></div>
                                             </li>
 
                                             <li>
                                                 <span class="icon flaticon-worldwide"></span>
-                                                <div class="text">13005 Greenville Avenue<br> California, TX 70240</div>
+                                                <div class="text">Bagru, Near GVK Toll Plaza<br> Jaipur, Rajasthan , Pin-303007</div>
                                             </li>
                                         </ul>
                                     </div>
@@ -512,27 +544,27 @@
                                     <div class="widget-content">
                                         <div class="outer clearfix">
                                             <figure class="image">
-                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-1.jpg" alt=""></a>
+                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/1.jpg" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/gallery/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-2.jpg" alt=""></a>
+                                                <a href="images/aboutJaipur/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/2.jpg" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/gallery/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-3.jpg" alt=""></a>
+                                                <a href="images/aboutJaipur/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/3.jpg" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/gallery/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-4.jpg" alt=""></a>
+                                                <a href="images/aboutJaipur/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/4.jpg" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/gallery/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-5.jpg" alt=""></a>
+                                                <a href="images/aboutJaipur/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/5.jpg" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-6.jpg" alt=""></a>
+                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/6.jpg" alt=""></a>
                                             </figure>
                                         </div>
                                     </div>
@@ -544,38 +576,29 @@
             </div>
         </div>
 
-        <!--Footer Bottom-->
-        <div class="footer-bottom">                    
-            <div class="auto-container">
-                <div class="inner-container clearfix">
-                    <div class="copyright-text">
-                        <p>© Copyright 2019 All Rights Reserved by <a href="index.html">Expert-Themes</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- End Footer -->
 
-</div>
-<!--End pagewrapper-->
 
-<!-- Color Palate / Color Switcher -->
-<div class="color-palate">
-    <div class="color-trigger">
-        <i class="fa fa-cog"></i>
-    </div>
-    <div class="color-palate-head">
-        <h6>Choose Your Demo</h6>
-    </div>
-    <ul class="box-version option-box"> <li>Full width</li> <li class="box">Boxed</li> </ul>
-    <ul class="rtl-version option-box"> <li>LTR Version</li> <li class="rtl">RTL Version</li> </ul>
-    <div class="palate-foo">
-        <span>You will find much more options for colors and styling in admin panel. This color picker is used only for demonstation purposes.</span>
-    </div>
-    <a href="#" class="purchase-btn">Purchase now</a>
-</div><!-- End Color Switcher -->
+        <!--End pagewrapper-->
 
+
+        <!--Scroll to top-->
+        <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
+        <script src="js/jquery.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery-ui.js"></script>
+        <script src="js/jquery.fancybox.js"></script>
+        <script src="js/appear.js"></script>
+        <script src="js/owl.js"></script>
+        <script src="js/wow.js"></script>
+        <script src="js/script.js"></script>
+        <!-- Color Setting -->
+        <script src="js/color-settings.js"></script>
+        <!--Google Map APi Key-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
+        <script src="js/map-script.js"></script>
+        <!--End Google Map APi-->>
+        <!-- End Footer -->
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
